<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patryk.uniassistant.NewTimetable">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/module_name"
            android:id="@+id/ModuleNameText"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:id="@+id/ModuleNameInput"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/module_code"
            android:id="@+id/ModuleCodeText"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:id="@+id/ModuleCodeInput"
            android:layout_row="2"
            android:layout_column="1"
            android:inputType="textCapCharacters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lecturer"
            android:id="@+id/LecturerText"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:id="@+id/LecturerInput"
            android:layout_row="3"
            android:layout_column="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/building"
            android:id="@+id/BuildingText"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:id="@+id/BuildingInput"
            android:layout_row="4"
            android:layout_column="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/day"
            android:id="@+id/DayText"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:id="@+id/DayInput"
            android:layout_row="5"
            android:layout_column="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time_start"
            android:id="@+id/TimeStartText"
            android:layout_row="6"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/Time_Start_Input"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time_finish"
            android:id="@+id/TimeFinishText"
            android:layout_row="7"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/Time_Finish_Input"
            android:layout_row="7"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_lesson"
            android:id="@+id/AddLesson_Button"
            android:layout_row="8"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/Home_Button"
            android:layout_row="8"
            android:layout_column="1" />
    </GridLayout>

</RelativeLayout>
